removed z-index fixes and add constants

--- a/amundsen_application/static/js/components/Feedback/styles.scss
+++ b/amundsen_application/static/js/components/Feedback/styles.scss
@@ -5,7 +5,7 @@
   bottom: 75px;
   position: fixed;
   right: 25px;
-  z-index: 999;
+  z-index: 2;
 
   &.expanded {
     background-color: white;
