--- a/amundsen_application/static/js/components/TableDetail/RequestMetadataForm/styles.scss
+++ b/amundsen_application/static/js/components/TableDetail/RequestMetadataForm/styles.scss
@@ -5,7 +5,7 @@
   bottom: 75px;
   position: fixed;
   left: 25px;
-  z-index: 999;
+  z-index: 2;
 
   &.expanded {
     background-color: white;
